# sol_i_web

./: README.md  dockerfile  main.py  pyproject.toml  test_main.py
.github/workflows/: docker_push.yml  linter.yml  pythons_tests.yml
src/: main.py  test_sever.py
tests/: test_sever.py
