[project]
name = "time-fastapi"
version = "0.1.0"
description = ""
authors = [
    {name = "AlanSilvaaa",email = "asilvar4@correo.uss.cl"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "pytest (>=8.3.5,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
